# KokoroTTS-API

./: .gitattributes  .gitignore  API.md  Dockerfile  README.md  hello.py  kokoro-v1.1-zh.onnx  main.py  memory_main.py  pyproject.toml
docs/: PLANNING.md  PROGRESS.md
kokoro_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
