[project]
name = "kokoro-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cn2an>=0.5.23",
    "fastapi>=0.115.12",
    "jieba>=0.42.1",
    "kokoro>=0.9.4",
    "kokoro-onnx>=0.4.9",
    "memory-profiler>=0.61.0",
    "misaki>=0.9.4",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "ordered-set>=4.1.0",
    "pip>=25.1.1",
    "pypinyin>=0.54.0",
    "pypinyin-dict>=0.9.0",
    "soundfile>=0.13.1",
    "uvicorn>=0.34.3",
]
